header gap fix

--- a/wp-content/themes/blox-child/style.css
+++ b/wp-content/themes/blox-child/style.css
@@ -162,6 +162,10 @@ p {
 	line-height:normal !important;
 }
 
+.page-header{
+	margin:0px !important;
+	border: none !important;
+}
 /* Portfolio */
 
 .hentry-inner{
